name:           frobo
version:        0.1
cabal-version:  >=1.2
build-type:     Simple
author:         jason

executable frobo
  hs-source-dirs:  src
  main-is:         Main.hs
  build-depends:   
                   base >= 4,
                   containers,
                   parsec,
                   mtl
  ghc-options:     -Wall
  other-modules:   
                   Text.ExpressionEngine.DFS,
                   Text.ExpressionEngine.NFA,
                   Text.ExpressionEngine.NFA.Matcher,
                   Text.ExpressionEngine.NFA.Parser,
                   Text.ExpressionEngine.Types

test-suite frobo-test
  type:            exitcode-stdio-1.0
  main-is:         frobo-test.hs
  ghc-options:     -Wall -rtsopts
  build-depends:   base >= 4, HTF > 0.9
  other-modules:   
                  Text.ExpressionEngine.NFA,
                  Text.ExpressionEngine.NFATest,
                  Text.ExpressionEngine.NFA.Parser,
                  Text.ExpressionEngine.NFA.ParserTest,
                  Text.ExpressionEngine.NFA.Matcher,
                  Text.ExpressionEngine.NFA.MatcherTest,
                  Text.ExpressionEngine.Types,
                  Text.ExpressionEngine.TypesTest
  hs-source-dirs:  
                  testsuite/tests,
                  src

